[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "circulation"
version = "0.1.0"
description = "Closed loop blood circulation model in FEniCS"
authors = [{ name = "Henrik Finsberg", email = "henriknf@simula.no" }]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "numpy",
    "pint",
    "rich"
]


[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
demos = ["matplotlib"]
docs = ["jupyter-book", "jupytext", "circulation[demos]"]
all = [
    "circulation[test]",
    "circulation[plot]",
    "circulation[docs]",
    "circulation[dev]",
]

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
addopts = [
    "--cov=circulation",
    "--cov-report=html",
    "--cov-report=term-missing",
    "-v",
]

testpaths = ["tests"]

[tool.mypy]
files = ["src/circulation", "tests"]
ignore_missing_imports = true
exclude = [
    "docs",
    "examples",
]



[tool.ruff]

# Exclude a variety of commonly ignored directories.
exclude = [
    "examples",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 100

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["E402", "E741", "E743", "E731"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.bumpversion]
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
current_version = "1.1.2"


[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
